# nonebot-plugin-ntfy

./: .gitignore  pyproject.toml
nonebot_plugin_ntfy/: __init__.py  config.py  worker.py
